# aventproxy

./: .gitignore  AGENTS.md  CLAUDE.md  CODEREVIEW.md  README.it.md  README.md  TUYA_API_RE.md  WHITEPAPER.md  docker-compose.yml  frida_hook.js  hacs.json  hook_mqtt.js  hook_mqtt_publish.js  pyproject.toml  repository.yaml  tuya_api.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  device_support.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
avent-webrtc-bridge/: README.md  build.sh  go.mod  go.sum  main.go
avent-webrtc-bridge/cmd/: root.go
aventproxy/: CHANGELOG.md  DOCS.md  Dockerfile  config.yaml  run.sh
aventproxy-bridge-addon/: Dockerfile  config.yaml  repository.yaml  run.sh
aventproxy-bridge-addon-beta/: Dockerfile  apparmor.txt  config.yaml  run.sh
aventproxy/proxy/: __init__.py  __main__.py  config.py  server.py
aventproxy/translations/: en.yaml
custom_components/philips_avent/: __init__.py  api.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  diagnostics.py  lan.py  manifest.json  number.py  payload.py  select.py  sensor.py  strings.json  (+1 more)
docker/: Dockerfile.bridge
docs/: reporting-issues.md
examples/: DPS_REFERENCE.md  camera_control.py  login_example.py  tuya_client.py
tests/: conftest.py  test_config.py  test_server.py
tools/: extract_signing_key.py  find_crash_cause.py  frida_datachannel_dump.js  frida_lullaby_intercept.js  mqtt_listener.py  mqtt_lullaby_sniffer.py  test_lullaby_stop.py
tuya-ipc-terminal/: .gitignore  LICENSE  README.md  go.mod  go.sum  main.go
(+75 files in other folders)
